# second-app

./: Cargo.toml  rust-toolchain.toml
.github/workflows/: build.yaml
src/: main.rs
static/: index.html
template/: index.html
