[package]
name = "second-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
serde = { version = "1.0.152", features = ["derive"] }
tinytemplate = "1.2.1"
tokio = { version = "1.24.1", features = ["full"] }
warp = { version = "0.3", default-features = false }
